# MaryAndFriends

./: .gitignore  PLANNING.md  README.md  TASK-COMPLETE.md  TASK.md  demo_phase1.py  docker-compose.yml  fix_memory_permissions.sh  generate_agents.py  main.py  pyproject.toml  test_phase1.py  test_traefik_setup.py
.github/: copilot-instructions.md
Mary2ish/: .dockerignore  .env.example  .gitignore  Dockerfile  PLANNING.md  README.md  TASK.md  debug_agent.py  demo_embed.html  docker-compose.yml  enhance_system_prompt.py  fastagent.config.yaml  fastagent.jsonl  main.py  main_old_root.py  parent_page.html  pyproject.toml  start.sh  system_prompt.txt  test_comprehensive_processing.py
Mary2ish/app/: main.py  main_new.py
Mary2ish/config/: README.md  fastagent.config.yaml  knowledge_facts.txt  ui.config.yaml
Mary2ish/config_examples/: fastagent.config.yaml  fastagent.secrets.yaml.example  knowledge_facts.txt.example  system_prompt.txt  ui.config.yaml
Mary2ish/docs/: CONFIGURATION_CLEANUP.md  MCP_INTEGRATION.md  MCP_RESPONSE_PROCESSING.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  (+4 more)
docs/: BRANCH_CONFIGURATION.md  BRANCH_SETUP_COMPLETE.md  MARY2ISH_CONFIG_REQUIREMENTS.md  MEMLAYER_INTEGRATION_EVALUATION.md  MEMLAYER_RESEARCH_ML1.md  PHASE1_COMPLETE.md  STREAMLIT_TEXT_FORMATTING_INVESTIGATION.md  TRAEFIK_CONFIGURATION_FIX.md
fast-agent testing/: fastagent.jsonl  fat.ipynb  main.py  mcp_test.py  pyproject.toml  sizer_example.py
template_agent_configs/: README.md  fastagent.config.yaml  fastagent.secrets.yaml  knowledge_facts.txt  system_prompt.txt  ui.config.yaml
(+27 files in other folders)
